fixed date alignment in upcoming events

--- a/src/app/uikit/upcomingEvents/upcomingEvents.module.sass
+++ b/src/app/uikit/upcomingEvents/upcomingEvents.module.sass
@@ -65,7 +65,7 @@ $accent: #9DFF48
             .eventGridContainer
                 display: flex
                 align-items: center             
-                justify-content: center
+                justify-content: flex-start
 
                 &>span
                     user-select: none
